feat: refactor security configuration and improve exception handling in GlobalExceptionHandler